Fix spacing for password validation indicators
Select form-fields which have a password element and span element, and
increase their bottom margin.

--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,10 @@ form#sign-up {
     color: var(--input-invalid);
 }
 
+.form-field:has(input[type="password"] + span) {
+    padding-bottom: 20px;
+}
+
 .form-field label {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
